#------------------------------------------------------------------------------
#    The MB-system:  CMakeLists.txt   27 June 2023
#
#    Copyright (c) 2023-2024 by
#    David W. Caress (caress@mbari.org)
#      Monterey Bay Aquarium Research Institute
#      Moss Landing, California, USA
#    Dale N. Chayes 
#      Center for Coastal and Ocean Mapping
#      University of New Hampshire
#      Durham, New Hampshire, USA
#    Christian dos Santos Ferreira
#      MARUM
#      University of Bremen
#      Bremen Germany
#      
#    MB-System was created by Caress and Chayes in 1992 at the
#      Lamont-Doherty Earth Observatory
#      Columbia University
#      Palisades, NY 10964
#
#    See README.md file for copying and redistribution conditions.
#------------------------------------------------------------------------------

message("In src/gmt")

find_package(GDAL CONFIG)
if (NOT GDAL_FOUND)
  message(STATUS "GDAL package config file GDALConfig.cmake not found, looking for FindGDAL.cmake file...")
  find_package(GDAL REQUIRED)
endif (NOT GDAL_FOUND)

find_package(GMT CONFIG)
if (NOT GMT_FOUND)
  message(STATUS "GMT package config file GMTConfig.cmake not found, looking for FindGMT.cmake file...")
  find_package(GMT REQUIRED)
endif (NOT GMT_FOUND)

# ---- GMT supplement plumbing --------------------------------------------------
# The DLL name (set via OUTPUT_NAME below) MUST equal the SHARED_LIB_NAME
# baked into the generated glue, because GMT's loader resolves modules with
# dlsym("<DLLname>_module_<verb>_all"). Out-of-tree supplements don't get the
# glue + moduleinfo header auto-generated by gmt5/src/CMakeLists.txt, so we
# regenerate them here.
set (MBSYSTEM_SUPPL_NAME mbsystem)
set (MBSYSTEM_SUPPL_PURPOSE
    "MB-System: GMT modules for swath bathymetry processing and plotting")

set (MBSYSTEM_MODULE_SRCS
    mbcontour.c
    mbgrd2obj.c
    #mbgrdtiff.c NOTE: new version doesn't work, still using pre-GMT6 version
    mbgrdtifforg.c
    mbswath.c)

set (MBSYSTEM_MODULEINFO_H
    "${CMAKE_CURRENT_BINARY_DIR}/gmt_${MBSYSTEM_SUPPL_NAME}_moduleinfo.h")
set (MBSYSTEM_GLUE_C
    "${CMAKE_CURRENT_BINARY_DIR}/gmt_${MBSYSTEM_SUPPL_NAME}_glue.c")

# Materialize the moduleinfo header by running our generator in script mode.
# Re-runs whenever any module source's THIS_MODULE_* macros change.
set (_mbsystem_moduleinfo_inputs)
foreach (_s ${MBSYSTEM_MODULE_SRCS})
    list (APPEND _mbsystem_moduleinfo_inputs "${CMAKE_CURRENT_SOURCE_DIR}/${_s}")
endforeach ()

add_custom_command (
    OUTPUT "${MBSYSTEM_MODULEINFO_H}"
    COMMAND ${CMAKE_COMMAND}
        -D "SRC_DIR=${CMAKE_CURRENT_SOURCE_DIR}"
        -D "OUTPUT_FILE=${MBSYSTEM_MODULEINFO_H}"
        -D "PROGS_SRCS=${MBSYSTEM_MODULE_SRCS}"
        -P "${CMAKE_CURRENT_SOURCE_DIR}/cmake/MbsysGenModuleInfo.cmake"
    DEPENDS
        ${_mbsystem_moduleinfo_inputs}
        "${CMAKE_CURRENT_SOURCE_DIR}/cmake/MbsysGenModuleInfo.cmake"
    COMMENT "Generating ${MBSYSTEM_SUPPL_NAME} moduleinfo header"
    VERBATIM)

# Bake the supplement name + purpose into the glue translation unit.
set (SHARED_LIB_NAME "${MBSYSTEM_SUPPL_NAME}")
set (SHARED_LIB_PURPOSE "${MBSYSTEM_SUPPL_PURPOSE}")
configure_file (
    "${CMAKE_CURRENT_SOURCE_DIR}/gmt_mbsystem_glue.c.in"
    "${MBSYSTEM_GLUE_C}"
    @ONLY)

add_library(mbsystem
    ${MBSYSTEM_MODULE_SRCS}
    ${MBSYSTEM_GLUE_C}
    ${MBSYSTEM_MODULEINFO_H})

set_target_properties(mbsystem PROPERTIES VERSION "0" SOVERSION "0" PREFIX "" OUTPUT_NAME mbsystem)
target_compile_definitions(mbsystem PUBLIC MB_PACKAGE_VERSION="${PROJECT_VERSION}"
                                       MB_PACKAGE_DATE="${PROJECT_DATE}")
# GMT's declspec.h flips EXTERN_MSC to __declspec(dllexport) when LIBRARY_EXPORTS
# is defined — needed when we're the TU defining a GMT_<module> plugin entry.
# Without this, MSVC warns C4273 (declared dllimport, defined as plain extern).
target_compile_definitions(mbsystem PRIVATE LIBRARY_EXPORTS)
# mbconfig.c needs install-prefix + database location strings (same vars
# defined for src/utilities/mbconfig).
set_source_files_properties(mbconfig.c PROPERTIES COMPILE_DEFINITIONS
    "MBSYSTEM_INSTALL_PREFIX=\"${CMAKE_INSTALL_PREFIX}\";ENV_OTPSDIR=\"${otpsDir}\";ENV_LEVITUSANNUAL82=\"${levitusDir}/LevitusAnnual82.dat\"")
target_include_directories(mbsystem PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# Generated glue + moduleinfo header live in the binary dir.
target_include_directories(mbsystem PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries(mbsystem GMT::GMT GMT::PSL mbio mbaux)

install(TARGETS mbsystem DESTINATION ${CMAKE_INSTALL_LIBDIR})
