dist_mbsystemhtml_DATA = \
    index.html \
    ChangeLog.html \
    COPYING.html \
    GPL.html \
    mbsystem_logo_small.gif \
    mbsystem_logo.gif \
    mbsystem_version.txt \
    mbsystem_capabilities.html \
    mbsystem_man_list.html \
    mbsystem_formats.html \
    mbsystem.html \
    mb7k2jstar.html \
    mb7k2ss.html \
    mb7kpreprocess.html \
    mbabsorption.html \
    mbareaclean.html \
    mbauvloglist.html \
    mbauvnavusbl.html \
    mbbackangle.html \
    mbclean.html \
    mbcontour.html \
    mbcopy.html \
    mbctdlist.html \
    mbdatalist.html \
    mbdefaults.html \
    mbdumpesf.html \
    mbedit.html \
    mbeditviz.html \
    mbextractsegy.html \
    mbfilter.html \
    mbformat.html \
    mbgetesf.html \
    mbgrdtiff.html \
    mbgrdviz.html \
    mbgrid.html \
    mbhistogram.html \
    mbhsdump.html \
    mbhysweeppreprocess.html \
    mbinfo.html \
    mbio.html \
    mbkongsbergpreprocess.html \
    mblevitus.html \
    mblist.html \
    mbm_arc2grd.html \
    mbm_bpr.html \
    mbm_copy.html \
    mbm_fmtvel.html \
    mbm_grd2arc.html \
    mbm_grd2geovrml.html \
    mbm_grd3dplot.html \
    mbm_grdcut.html \
    mbm_grdinfo.html \
    mbm_grdplot.html \
    mbm_grdtiff.html \
    mbm_grid.html \
    mbm_histplot.html \
    mbm_makedatalist.html \
    mbm_multicopy.html \
    mbm_multidatalist.html \
    mbm_multiprocess.html \
    mbm_plot.html \
    mbm_route2mission.html \
    mbm_stat.html \
    mbm_utm.html \
    mbm_xbt.html \
    mbm_xyplot.html \
    mbmosaic.html \
    mbnavadjust.html \
    mbnavadjustmerge.html \
    mbnavedit.html \
    mbnavlist.html \
    mbneptune2esf.html \
    mbotps.html \
    mbprocess.html \
    mbps.html \
    mbrollbias.html \
    mbrolltimelag.html \
    mbroutetime.html \
    mbsegygrid.html \
    mbsegyinfo.html \
    mbsegylist.html \
    mbsegypsd.html \
    mbset.html \
    mbstripnan.html \
    mbsvplist.html \
    mbswath.html \
    mbtime.html \
    mbvelocitytool.html
    